# raggae

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLAN_IN_PROGRESS.md  docker-compose.prod.yml  docker-compose.yml  patch_global.js  pr_diff.txt
server/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 20260215_01_create_projects_and_documents.py  20260215_02_add_document_chunks.py  20260215_03_add_document_processing_strategy.py  20260215_04_add_chunk_metadata_json.py  20260215_05_add_documents_project_fk.py  20260215_06_add_document_chunks_embedding_hnsw_index.py  20260215_07_add_conversations_and_messages.py  20260215_08_add_messages_role_check.py  20260215_09_add_chat_query_indexes.py  20260215_10_add_conversation_title.py  20260215_11_add_messages_source_documents.py  20260215_12_add_messages_reliability_percent.py  20260215_13_add_hybrid_search_indexes.py  20260216_14_change_embedding_dimension_to_768.py  20260217_15_add_document_status_and_metadata.py  20260217_16_change_embedding_dimension_back_to_1536.py  20260217_17_add_project_ingestion_settings.py  20260217_18_add_parent_child_chunking.py  20260217_19_add_llm_prompt_to_messages.py  20260217_20_add_documents_last_indexed_at.py  20260217_21_add_user_model_provider_credentials.py  20260217_22_add_project_ai_provider_settings.py  20260217_23_add_project_api_key_credential_ids.py  20260224_24_drop_unique_active_credential_constraint.py  20260224_25_add_project_retrieval_strategy.py  20260224_26_add_project_retrieval_top_k.py  20260224_27_add_project_retrieval_min_score.py  20260224_28_add_project_chat_history_settings.py  20260225_29_add_project_reranking_settings.py  20260225_30_restore_missing_revision_noop.py  20260226_31_add_organization_core_tables.py  20260226_32_add_organization_slug.py  20260226_33_add_project_organization_id.py  20260301_34_drop_unique_active_user_credential_per_provider.py  20260301_35_add_org_model_provider_credentials.py  20260301_36_add_org_credential_ids_to_projects.py  20260301_37_add_conversation_status_and_project_exchange_limit.py  20260318_37_add_locale_to_users.py  20260319_38_add_entra_id_and_nullable_hashed_password.py  20260321_39_add_project_snapshots.py  (+10 more)
server/src/raggae/application/: constants.py
server/src/raggae/presentation/: main.py
server/tests/: conftest.py
server/tests/e2e/: test_auth_endpoints.py  test_chat_endpoints.py  test_document_endpoints.py  test_document_processing_error_endpoints.py  test_entra_sso_endpoints.py  test_mcp_stats_endpoint.py  test_model_catalog_endpoints.py  test_model_credentials_endpoints.py  test_org_mcp_server_endpoints.py  test_organization_default_config_endpoints.py  test_organization_endpoints.py  test_project_endpoints.py  test_project_mcp_activation_endpoints.py  test_query_endpoints.py  test_stats_endpoints.py  test_system_endpoints.py
server/tests/integration/: test_document_processing_flow.py  test_document_processing_with_postgres.py  test_minio_file_storage_service.py  test_openai_embedding_service.py  test_sqlalchemy_agent_configuration_repository.py  test_sqlalchemy_chunk_retrieval_service.py  test_sqlalchemy_conversation_and_message_repositories.py  test_sqlalchemy_document_chunk_repository.py  test_sqlalchemy_document_repository.py  test_sqlalchemy_org_mcp_server_repository.py  test_sqlalchemy_organization_repositories.py  test_sqlalchemy_project_mcp_activation_repository.py  test_sqlalchemy_project_repository.py  test_sqlalchemy_project_snapshot_repository.py  test_sqlalchemy_provider_credential_repository.py  test_sqlalchemy_user_repository.py
server/tests/unit/application/: test_chunking_strategy_selector.py  test_document_chunk_dto.py
server/tests/unit/infrastructure/: test_adaptive_text_chunker_service.py  test_bcrypt_password_hasher.py  test_document_file_metadata_extractor.py  test_entra_oauth_provider.py  test_gemini_embedding_service.py  test_gemini_llm_service.py  test_heading_section_text_chunker_service.py  test_heuristic_document_structure_analyzer.py  test_in_memory_chunk_retrieval_service.py  test_in_memory_llm_service_stream.py  test_in_memory_oauth_code_store.py  (+18 more)
(+931 files in other folders)
