[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raggae"
version = "0.2.0"
description = "RAG Generator Agent Expert - Platform for creating RAG-based conversational agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.32",
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "anthropic>=0.116.0",
    "pgvector>=0.5.0",
    "minio>=7.2.20",
    "pypdf>=6.14.2",
    "pdfplumber>=0.11.10",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "llama-index-core>=0.14.23",
    "sentence-transformers>=5.6.0",
    "langdetect>=1.0.9",
    "keybert>=0.9.0",
    "scikit-learn>=1.9.0",
    "msal>=1.37.0",
    "itsdangerous>=2.2.0",
    "openpyxl>=3.1.5",  # XLSX support (xlrd 2.x dropped XLSX support)
    "xlrd>=2.0.2",      # XLS (legacy binary) support only — do NOT use for XLSX
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.20",
    "mypy>=2.2.0",
    "types-python-jose>=3.5.0",
]
test = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "msal",
    "minio",
    "langdetect",
    "langdetect.*",
    "keybert",
    "sklearn.*",
    "openai",
    "pypdf",
    "docx",
    "sentence_transformers",
    "sentence_transformers.*",
    "pgvector",
    "pgvector.*",
    "jose",
    "jose.*",
    "openpyxl",
    "xlrd",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]
